# tauri-redis

./: .gitignore  .prettierignore  .prettierrc  LICENSE  README.md  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: app.html
src-tauri/: Cargo.toml
src-tauri/app/: Cargo.toml  main.rs  tauri.conf.json
src-tauri/app/cmd/: demo.rs
src-tauri/app/command/: client.rs  connections.rs  demo.rs  mod.rs  system.rs  telemetry.rs
src-tauri/app/context/: features.rs  mod.rs  setup.rs
src-tauri/app/features/: cache.rs  client.rs  command.rs  context.rs  error.rs  events.rs  mod.rs  response.rs
src-tauri/app/plugins/: mod.rs
src-tauri/app/utils/: calculator.rs  config.rs  judgements.rs  mod.rs
src-tauri/config/: Cargo.toml  impls.rs  lib.rs
src-tauri/config/public/: config.toml
src-tauri/core/: Cargo.toml  lib.rs
src-tauri/core/cache/: abstracts.rs  impls.rs  mod.rs
src-tauri/core/features/: events.rs
src-tauri/plugins/setting/: Cargo.toml  README.md  package.json  pnpm-lock.yaml  tsconfig.json
src-tauri/plugins/setting/resources/: presets.json  settings.json
src-tauri/plugins/setting/src/: command.rs  events.rs  lib.rs
src-tauri/plugins/setting/src/features/: error.rs  mod.rs  state.rs
src-tauri/plugins/setting/webview-dist/: impls.d.ts  index.js  ipc.d.ts  types.d.ts
src-tauri/plugins/setting/webview-dist/webview-src/: impls.d.ts  index.d.ts  ipc.d.ts  types.d.ts
src-tauri/plugins/setting/webview-src/: impls.ts  index.ts  ipc.ts  tsconfig.json  types.ts
src-tauri/plugins/translation/: Cargo.toml  README.md  package.json  pnpm-lock.yaml
src-tauri/plugins/translation/resources/translations/: en-US.json  zh-CN.json
src-tauri/plugins/translation/src/: command.rs  events.rs  lib.rs
src-tauri/plugins/translation/src/features/: error.rs  state.rs
src-tauri/plugins/translation/webview-dist/: constants.d.ts  impls.d.ts  index.js  ipc.d.ts
src-tauri/plugins/translation/webview-dist/webview-src/: impls.d.ts  types.d.ts
src-tauri/plugins/translation/webview-src/: constants.ts  impls.ts  ipc.ts  rollup.config.js  tsconfig.json  types.ts
src/lib/: Greet.svelte
src/lib/actions/: click-outside.ts  focus-when-mount.ts  global-keyboard.ts  keyboard.ts
src/lib/apis/: connections.ts  index.ts  redis-client.ts  telemetry.ts
src/lib/components/: Button.svelte  Card.svelte  Checkbox.svelte  Dialog.svelte  Form.svelte  FormItem.svelte  Icon.svelte  Input.svelte  InputNumber.svelte  Select.svelte
src/lib/components/form/: Form.svelte  FormItem.svelte  context.ts  utils.ts
src/lib/components/interaction/: Loading.svelte
src/lib/components/notification/: Message.svelte  MessageManager.svelte  message.ts
src/lib/components/page/: Dashboard.svelte
src/lib/components/page/key-detail/: KeyDetail.svelte  KeyTypeHashDetailContent.svelte  KeyTypeStringDetailContent.svelte
src/lib/components/select/: Options.svelte  Select.svelte
src/lib/constants/: index.ts  numbers.ts  regexps.ts  strings.ts
src/lib/sass/: main.scss
src/lib/sass/abstract/: _extends.scss  _mixins.scss  _variables.scss
src/lib/sass/base/: _base.scss  _btn.scss  _dialog.scss  _form.scss  _input.scss  _list.scss  _table.scss  _typography.scss
src/lib/sass/components/: _button.scss  _card.scss  _checkbox.scss  _dashboard.scss  _dialog.scss  _form.scss  _icon.scss  _input.scss  _key-detail.scss  _loading.scss  _message.scss  _select.scss  _table.scss
src/lib/sass/custom/: _font-awesome.scss
src/lib/sass/custom/font-awsome/: _animated.scss  _core.scss  _mixins.scss  _variables.scss  brands.scss  regular.scss  solid.scss
src/lib/sass/layout/: _aside.scss  _container.scss  _content.scss  _main.scss  _root.scss
src/lib/sass/pages/: _connections.scss  _main.scss  _settings.scss
src/lib/sass/theme/: _dark.scss  _light.scss
src/lib/types/: base.ts  components.ts  index.ts  ipc.ts  page.ts  utils.ts
src/lib/unused/routes/: styles.css
src/lib/unused/routes/about/: +page.svelte
src/lib/unused/routes/sverdle/: +page.svelte
src/lib/unused/routes/sverdle/how-to-play/: +page.svelte
src/lib/utils/: appearance.ts  async.ts  calculators.ts  components.ts  judgements.ts  miscs.ts  page.ts  subscriber.ts  translator.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte  +page.ts  Aside.svelte  Counter.svelte  Header.svelte  Main.svelte  styles.css
src/routes/about/: +page.svelte
src/routes/connections/: +page.svelte  +page.ts  Aside.svelte  EditConnectionDialog.svelte  Main.svelte  NewConnectionDialog.svelte  NewKeyDialog.svelte
src/routes/logs/: +page.svelte  +page.ts
src/routes/settings/: +page.svelte  +page.ts
src/routes/sverdle/: +page.svelte
src/routes/sverdle/how-to-play/: +page.svelte
static/: splashscreen.html
static/mock/: redis-info.txt
