[workspace.package]
version = "0.0.1"
description = "Tauri Redis."
authors = ["wangziling <sling1994@live.com>"]
license = "MIT"
repository = "https://github.com/wangziling/tauri-redis"
edition = "2021"
readme = "README.md"

[workspace]
members = ["app", "core", "config"]
resolver = "2"

[workspace.dependencies]
tauri_redis = { path = "./app" }
tauri_redis_core = { path = "./core" }
tauri_redis_config = { path = "./config" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
config = { version = "0.13.3", features = ["toml"] }
once_cell = "1.18.0"
fs_extra = "1.3.0"
uuid = { version = "1", features = [
  "v4",                # Lets you generate random UUIDs
  "fast-rng",          # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }
chrono = "0.4"
redis = { version = "0.23.2", features = ["r2d2", "json", "tokio-comp", "connection-manager"] }
r2d2 = "0.8.4"
