[workspace.package]
version = "0.0.1"
description = "Tauri Redis."
authors = ["wangziling <sling1994@live.com>"]
license = "MIT"
repository = "https://github.com/wangziling/tauri-redis"
edition = "2021"
readme = "README.md"

[workspace]
members = ["app", "core", "config", "plugins/*"]
resolver = "2"

[workspace.dependencies]
tauri_redis = { path = "./app" }
tauri_redis_core = { path = "./core" }
tauri_redis_config = { path = "./config" }
tauri_plugin_tauri_redis_translation = { path = "./plugins/translation" }
tauri_plugin_tauri_redis_setting = { path = "./plugins/setting" }
tauri = { version = "1.4", features = ["shell-open", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
config = { version = "0.13.3", features = ["toml"] }
once_cell = "1.18.0"
fs_extra = "1.3.0"
uuid = { version = "1", features = [
  "v4",                # Lets you generate random UUIDs
  "fast-rng",          # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }
chrono = "0.4"
fred = { version = "7.0.0", features = ["full-tracing", "redis-json", "check-unresponsive", "metrics"] }
tokio-stream="0.1"
regex = "1.9"
tokio = { version = "1", features = ["sync"] }

[profile.release]
strip = true
lto = true
opt-level = 'z' # Optimize for the file size
