[workspace.package]
version = "0.0.2"
description = "Tauri Redis."
authors = ["wangziling <sling1994@live.com>"]
license = "MIT"
repository = "https://github.com/wangziling/tauri-redis"
edition = "2021"
readme = "README.md"
rust-version="1.77.2"

[workspace]
members = ["app", "core", "config", "plugins/*"]
resolver = "2"

[workspace.dependencies]
tauri_redis = { path = "./app" }
tauri_redis_core = { path = "./core" }
tauri_redis_config = { path = "./config" }
tauri_plugin_tauri_redis_translation = { path = "./plugins/translation" }
tauri_plugin_tauri_redis_setting = { path = "./plugins/setting" }
tauri = { version = "1.6", features = ["shell-open", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
anyhow = "1.0"
thiserror = "1.0"
config = { version = "0.14", features = ["toml"] }
once_cell = "1.19"
fs_extra = "1.3"
uuid = { version = "1", features = [
  "v4",                # Lets you generate random UUIDs
  "fast-rng",          # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }
chrono = "0.4"
fred = { version = "9.0", features = ["full-tracing", "serde-json", "metrics"] }
futures = "0.3"
regex = "1.10"
tokio = { version = "1", features = ["sync"] }

# See https://tauri.app/v1/guides/building/app-size#rust-build-time-optimizations
[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols
