[package]
name = "tauri_redis"
version.workspace = true
description.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
rust-version.workspace = true

[[bin]]
path = "main.rs"
name = "tauri_redis"

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
fred.workspace = true
futures.workspace = true
tokio.workspace = true
once_cell.workspace = true
tauri_redis_core.workspace = true
tauri_redis_config.workspace = true
tauri_plugin_tauri_redis_translation.workspace = true
tauri_plugin_tauri_redis_setting.workspace = true

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
