[package]
name = "tauri_redis_config"
version.workspace = true
description.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
rust-version.workspace = true

[lib]
path = "lib.rs"

[dependencies]
config.workspace = true
once_cell.workspace = true
