[package]
name = "tauri_redis_core"
version.workspace = true
description.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
rust-version.workspace = true

[lib]
path = "lib.rs"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
fs_extra.workspace = true
