[package]
name = "tauri_plugin_tauri_redis_setting"
version = "0.0.1"
description = "A setting plguin for Tauri redis."
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
readme = "README.md"
rust-version = "1.72"
exclude = ["/examples", "/webview-dist", "/webview-src", "node_modules"]

[dependencies]
tauri.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tauri_redis_core.workspace = true
tauri_redis_config.workspace = true
regex.workspace = true
once_cell.workspace = true
